Fixed bug where the bottom navigation bar would shrink when on the chat page on IOS

--- a/src/App.css
+++ b/src/App.css
@@ -165,13 +165,21 @@ section {
   }
 }
 
-@media (max-width: 767px){
-  .weightList{
-    overflow: scroll;
-    border-radius: 5px;
-    background: rgba(209, 209, 209, 0.68);
-  }
+body {
+  width: 100vw;
+  overflow-x: hidden;
 }
+
+html {
+  overflow-x: hidden;
+}
+
+.weightList{
+  overflow: scroll;
+  border-radius: 5px;
+  background: rgba(209, 209, 209, 0.68);
+}
+
 
 /* Slider for weight and height */
 
